# dl-alpha-bench

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: experiment_joinquant_real.yaml  experiment_joinquant_template.yaml  experiment_microstructure_mock.yaml  experiment_ricequant_real.yaml  experiment_ricequant_template.yaml  experiment_sample.yaml  experiment_walk_forward.yaml
docs/: 01-requirements.md  02-architecture.md  03-data-contract.md  04-leakage-prevention.md  05-experiment-reproducibility.md  06-gui-prd.md  07-dev-plan.md  08-test-plan.md  09-contributing.md  10-release-checklist.md  interview-highlights.md  live-connectors-validation-template.md
scripts/: generate_readme_ui_assets.py
src/dl_alpha_bench/: __init__.py  cli.py
src/dl_alpha_bench/backtest/: __init__.py  engine.py
src/dl_alpha_bench/cv/: __init__.py  splitters.py
src/dl_alpha_bench/data/: __init__.py  actions.py  connectors.py  contracts.py  errors.py  resilience.py  validator.py
src/dl_alpha_bench/dataset/: __init__.py  builder.py
src/dl_alpha_bench/eval/: __init__.py  explainability.py  metrics.py
src/dl_alpha_bench/exp/: __init__.py  errors.py  (+2 more)
tests/: test_backtest.py  test_cli.py  test_connectors_resilience.py  test_corporate_actions.py  test_cv_leakage.py  test_dataset_builder.py  test_experiment_runner.py  test_feature_explainability.py  test_gui_behavior.py  test_gui_import.py  test_live_connectors_smoke.py  test_microstructure_features.py
(+11 files in other folders)
